--- a/Assignment 2 - Fruit Ninja 3D/ProjectSettings/wit.config
+++ b/Assignment 2 - Fruit Ninja 3D/ProjectSettings/wit.config
@@ -1,1 +1,1 @@
-{"configSettings":[{"appID":"SharedServerToken","serverToken":""},{"appID":"voiceSDK_en","serverToken":""}]}
+{"configSettings":[{"appID":"SharedServerToken","serverToken":"5WKFJIG5EHA6T2YRC2C6Y3OPMDLT2GLQ"},{"appID":"voiceSDK_en","serverToken":""},{"appID":"1159472621403667","serverToken":"F64LSLQENILYUIRR63I4IRE3TFOWWTAT"},{"appID":"591626752829181","serverToken":"5WKFJIG5EHA6T2YRC2C6Y3OPMDLT2GLQ"}]}
