--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Assets/_Creepy_Cat/_3D Scifi Kit Starter Kit/
 Assets/_Creepy_Cat/_3D Showroom Free/
 Assets/DizzyMedia/
 Library/
+Project 1 - Jedi Training/Library/PackageCache/com.unity.ide.visualstudio@2.0.17/Editor/AppleEventIntegration~/AppleEventIntegration.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
