--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ Library/
 Project 1 - Jedi Training/Library/PackageCache/com.unity.ide.visualstudio@2.0.17/Editor/AppleEventIntegration~/AppleEventIntegration.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
 
 VR Haptic Racing/Assets/TerrainTexturesPackFree/TerrainTextures/
-This .gitignore file should be placed at the root of your Unity project directory
+# This .gitignore file should be placed at the root of your Unity project directory
 
-Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
+# Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 
 /[Ll]ibrary/
 /[Tt]emp/
