texture change to fix pink texture
https://assetstore.unity.com/packages/2d/textures-materials/floors/outdoor-ground-textures-12555

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,5 @@ VR Haptic Racing/Temp/
 VR Haptic Racing/Assets/EasyRoads3D scenes/
 
 VR Haptic Racing/Assets/EasyRoads3D Assets/
+
+VR Haptic Racing/Assets/ADG_Textures/
